--- a/query-org-user-with-message-extension-sso/teamsfx/app.yml
+++ b/query-org-user-with-message-extension-sso/teamsfx/app.yml
@@ -15,7 +15,7 @@ provision:
 
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
     with:
-      name: QueryOrgUserWithMESSO
+      name: QueryOrgUserWithMESSO-${{TEAMSFX_ENV}}
     # Output: following environment variable will be persisted in current environment's .env file.
     # BOT_ID: the AAD app client id created for Bot Registration.
     # SECRET_BOT_PASSWORD: the AAD app client secret created for Bot Registration.
