--- a/bot-sso/teamsfx/app.yml
+++ b/bot-sso/teamsfx/app.yml
@@ -47,7 +47,7 @@ deploy:
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: sso-bot # Teams app name
+      name: sso-bot-${{TEAMSFX_ENV}} # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
