--- a/hello-world-in-meeting/teamsfx/app.local.yml
+++ b/hello-world-in-meeting/teamsfx/app.local.yml
@@ -3,7 +3,7 @@ version: 1.0.0
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: hello-world-in-meeting-local # Teams app name
+      name: hello-world-in-meeting-${{TEAMSFX_ENV}} # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
