--- a/hello-world-tab-with-backend/teamsfx/app.local.yml
+++ b/hello-world-tab-with-backend/teamsfx/app.local.yml
@@ -15,7 +15,7 @@ registerApp:
 
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: hello-world-tab-with-backend # Teams app name
+      name: tab-with-backend-${{TEAMSFX_ENV}} # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
