--- a/query-org-user-with-message-extension-sso/teamsfx/app.local.yml
+++ b/query-org-user-with-message-extension-sso/teamsfx/app.local.yml
@@ -15,7 +15,7 @@ registerApp:
 
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: QueryOrgUserWithMESSO # Teams app name
+      name: QueryOrgUserWithMESSO-${{TEAMSFX_ENV}} # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
