--- a/todo-list-SPFx/teamsfx/app.yml
+++ b/todo-list-SPFx/teamsfx/app.yml
@@ -22,7 +22,7 @@ deploy:
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: TodoListSPFx # Teams app name
+      name: TodoListSPFx-${{TEAMSFX_ENV}} # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
