--- a/query-org-user-with-message-extension-sso/bot/package.json
+++ b/query-org-user-with-message-extension-sso/bot/package.json
@@ -20,12 +20,13 @@
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^3.0.2",
     "@microsoft/teamsfx": "^2.0.0",
-    "botbuilder": ">=4.15.0 <5.0.0",
+    "botbuilder": ">=4.18.0 <5.0.0",
     "isomorphic-fetch": "^3.0.0",
     "restify": "^10.0.0"
   },
   "devDependencies": {
-    "@types/restify": "8.5.5",
+    "@types/restify": "^8.5.5",
+    "@types/node": "^14.0.0",
     "copyfiles": "^2.4.1",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.7",
