--- a/bot-sso/teamsapp.yml
+++ b/bot-sso/teamsapp.yml
@@ -1,17 +1,8 @@
 version: 1.0.0
 
+environmentFolderPath: ./env
+
 provision:
-  - uses: aadApp/create # Creates a new AAD app to authenticate users if AAD_APP_CLIENT_ID environment variable is empty
-    with:
-      name: sso-bot-aad # Note: when you run configure/aadApp, the AAD app name will be updated based on the definition of manifest. If you don't want to change the name, ensure the name in AAD manifest is same with the name defined here.
-      generateClientSecret: true # If the value is false, the action will not generate client secret for you
-      # Output: following environment variable will be persisted in current environment's .env file.
-      # AAD_APP_CLIENT_ID: the client id of AAD app
-      # AAD_APP_CLIENT_SECRET: the client secret of AAD app
-      # AAD_APP_OBJECT_ID: the object id of AAD app
-      # AAD_APP_TENANT_ID: the tenant id of AAD app
-      # AAD_APP_OAUTH_AUTHORITY_HOST: the host of OAUTH authority of AAD app
-      # AAD_APP_OAUTH_AUTHORITY: the OAUTH authority of AAD app
 
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
     with:
@@ -45,6 +36,18 @@ deploy:
       resourceId: ${{BOT_AZURE_APP_SERVICE_RESOURCE_ID}} # The resource id of the cloud resource to be deployed to
 
 registerApp:
+  - uses: aadApp/create # Creates a new AAD app to authenticate users if AAD_APP_CLIENT_ID environment variable is empty
+    with:
+      name: sso-bot-aad # Note: when you run configure/aadApp, the AAD app name will be updated based on the definition of manifest. If you don't want to change the name, ensure the name in AAD manifest is same with the name defined here.
+      generateClientSecret: true # If the value is false, the action will not generate client secret for you
+      # Output: following environment variable will be persisted in current environment's .env file.
+      # AAD_APP_CLIENT_ID: the client id of AAD app
+      # AAD_APP_CLIENT_SECRET: the client secret of AAD app
+      # AAD_APP_OBJECT_ID: the object id of AAD app
+      # AAD_APP_TENANT_ID: the tenant id of AAD app
+      # AAD_APP_OAUTH_AUTHORITY_HOST: the host of OAUTH authority of AAD app
+      # AAD_APP_OAUTH_AUTHORITY: the OAUTH authority of AAD app
+
   - uses: teamsApp/create # Creates a Teams app
     with:
       name: sso-bot-${{TEAMSFX_ENV}} # Teams app name
@@ -54,11 +57,10 @@ registerApp:
 configureApp:
   - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
     with:
-      manifestTemplatePath: ./aad.manifest.template.json # Relative path to teamsfx folder. Environment variables in manifest will be replaced before apply to AAD app
-      outputFilePath : ./build/aad.manifest.${{TEAMSFX_ENV}}.json
+      manifestPath: ./aad.manifest.template.json # Relative path to teamsfx folder. Environment variables in manifest will be replaced before apply to AAD app
+      outputFilePath: ./build/aad.manifest.${{TEAMSFX_ENV}}.json
   # Output: following environment variable will be persisted in current environment's .env file.
   # AAD_APP_ACCESS_AS_USER_PERMISSION_ID: the id of access_as_user permission which is used to enable SSO
-  
   - uses: teamsApp/validate
     with:
       manifestPath: ./appPackage/manifest.template.json # Path to manifest template
