--- a/hello-world-bot/bot/package.json
+++ b/hello-world-bot/bot/package.json
@@ -19,13 +19,14 @@
   },
   "dependencies": {
     "@microsoft/adaptivecards-tools": "^1.0.0",
-    "botbuilder": "~4.14.0",
+    "botbuilder": "^4.18.0",
     "botbuilder-dialogs": "~4.14.0",
     "isomorphic-fetch": "^3.0.0",
     "restify": "^10.0.0"
   },
   "devDependencies": {
-    "@types/restify": "8.5.5",
+    "@types/restify": "^8.5.5",
+    "@types/node": "^14.0.0",
     "env-cmd": "^10.1.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4",
