--- a/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/teamsfx/app.yml
+++ b/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/teamsfx/app.yml
@@ -3,7 +3,7 @@ version: 1.0.0
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      manifestPath: ./appPackage/manifest.template.json # Path to manifest
+      manifestPath: ./appPackage/manifest.json # Path to manifest
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
@@ -29,7 +29,7 @@ provision:
 configureApp:
   - uses: teamsApp/createAppPackage # Build Teams app package with latest env value
     with:
-      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
@@ -52,10 +52,10 @@ deploy:
 publish:
   - uses: teamsApp/validate
     with:
-      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.json # Path to manifest template
   - uses: teamsApp/createAppPackage
     with:
-      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
   - uses: teamsApp/publishAppPackage # Publish the app to Teams app catalog
