--- a/hello-world-in-meeting/package.json
+++ b/hello-world-in-meeting/package.json
@@ -13,7 +13,7 @@
         "axios": "^0.21.1",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
-        "react-responsive": "^8.2.0",
+        "react-responsive": "^9.0.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^5.0.1"
     },
@@ -21,7 +21,7 @@
         "@microsoft/teamsfx-run-utils": "alpha"
     },
     "scripts": {
-        "dev:teamsfx": "node teamsfx/script/run.js . teamsfx/.env.local",
+        "dev:teamsfx": "node script/run.js . env/.env.local",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "eject": "react-scripts eject",
