--- a/hello-world-in-meeting/teamsapp.local.yml
+++ b/hello-world-in-meeting/teamsapp.local.yml
@@ -1,5 +1,7 @@
 version: 1.0.0
 
+environmentFolderPath: ./env
+
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
@@ -15,10 +17,10 @@ configureApp:
         TAB_ENDPOINT: https://localhost:53000
   - uses: teamsApp/validate
     with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
@@ -36,7 +38,6 @@ deploy:
     # SSL_CRT_FILE: certificate file
     # SSL_KEY_FILE: certificate key
 
-  - uses: npm/command # Run npm command
+  - uses: cli/runNpmCommand # Run npm command
     with:
       args: install --no-audit
-
