--- a/NPM-search-connector-M365/teamsapp.yml
+++ b/NPM-search-connector-M365/teamsapp.yml
@@ -1,5 +1,7 @@
 version: 1.0.0
 
+environmentFolderPath: ./env
+
 provision:
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
     with:
@@ -40,11 +42,13 @@ configureApp:
   - uses: teamsApp/validate
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
-  - uses: teamsApp/createAppPackage # Build Teams app package with latest env value
+
+  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
+
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
     with:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to teamsfx folder. This is the path for built zip file.
@@ -55,11 +59,13 @@ publish:
   - uses: teamsApp/validate
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
-  - uses: teamsApp/createAppPackage
+
+  - uses: teamsApp/zipAppPackage
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
+
   - uses: teamsApp/publishAppPackage # Publish the app to Teams app catalog
     with:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
