--- a/hello-world-in-meeting/teamsapp.local.yml
+++ b/hello-world-in-meeting/teamsapp.local.yml
@@ -1,5 +1,7 @@
 version: 1.0.0
 
+environmentFolderPath: ./env
+
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
@@ -36,7 +38,6 @@ deploy:
     # SSL_CRT_FILE: certificate file
     # SSL_KEY_FILE: certificate key
 
-  - uses: npm/command # Run npm command
+  - uses: cli/runNpmCommand # Run npm command
     with:
       args: install --no-audit
-
