--- a/NPM-search-connector-M365/.webappignore
+++ b/NPM-search-connector-M365/.webappignore
@@ -1,3 +1,4 @@
+.webappignore
 .fx
 .deployment
 .localSettings
@@ -13,11 +14,15 @@ local.settings.json
 test
 tsconfig.json
 .DS_Store
-node_modules/.bin
-node_modules/ts-node
-node_modules/typescript
-appPackage/
-infra/
-teamsfx/
-images/
+teamsapp.yml
+teamsapp.*.yml
+/env/
+/script/
+/node_modules/.bin
+/node_modules/ts-node
+/node_modules/typescript
+/appPackage/
+/infra/
+/teamsfx/
+/images/
 cli.md
