--- a/graph-connector-app/.gitignore
+++ b/graph-connector-app/.gitignore
@@ -1,14 +1,12 @@
-
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # TeamsFx files
-node_modules
-.fx/configs/localSettings.json
-.fx/states/*.userdata
+teamsfx/.env.*
 .DS_Store
-.env.teamsfx.local
-subscriptionInfo.json
 build
-.fx/configs/config.local.json
-.fx/states/state.local.json
-.backup
-env/.env.*
-.backup/*
+.deployment
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
