--- a/graph-connector-app/.gitignore
+++ b/graph-connector-app/.gitignore
@@ -1,9 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # TeamsFx files
-teamsfx/.env.*
+env/.env.*
 .DS_Store
 build
 .deployment
+.localSettings
 
 # dependencies
 /node_modules
