--- a/team-central-dashboard/teamsapp.yml
+++ b/team-central-dashboard/teamsapp.yml
@@ -22,6 +22,12 @@ provision:
     # Output: N/A
 
 deploy:
+  - uses: prerequisite/install # Install dependencies
+    with:      
+      dotnet: true
+    # Output: following environment variable will be persisted in current environment's .env file.    
+    # DOTNET_PATH: the path of the .NET binary
+
   - uses: cli/runNpmCommand # Run npm command
     with:
       args: install
@@ -50,6 +56,7 @@ deploy:
     with:
       workingDirectory: api
       args: build extensions.csproj -o bin --ignore-failed-sources
+      execPath: ${{DOTNET_PATH}}
   - uses: azureFunctions/deploy
     with:
       # deploy base folder
