--- a/graph-connector-bot/package.json
+++ b/graph-connector-bot/package.json
@@ -6,12 +6,12 @@
   "license": "MIT",
   "main": "./lib/index.js",
   "scripts": {
-    "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
+    "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
     "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./index.ts",
-    "build": "tsc --build && shx cp -r ./public ./lib/ && shx cp -r ./adaptiveCards ./lib/ && shx cp -r ./assets ./lib/",
+    "build": "tsc --build && shx cp -r ./adaptiveCards ./lib/",
     "start": "node ./lib/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
+    "watch": "nodemon --exec \"npm run start\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
