--- a/share-now/appPackage/manifest.json
+++ b/share-now/appPackage/manifest.json
@@ -93,11 +93,10 @@
         "messageTeamMembers"
     ],
     "validDomains": [
-        "${{TAB_DOMAIN}}",
-        "${{BOT_DOMAIN}}"
+        "${{TAB_DOMAIN}}"
     ],
     "webApplicationInfo": {
         "id": "${{AAD_APP_CLIENT_ID}}",
-        "resource": "api://${{TAB_DOMAIN}}/botid-${{BOT_ID}}"
+        "resource": "api://${{TAB_DOMAIN}}/${{AAD_APP_CLIENT_ID}}"
     }
 }
